[gd_scene load_steps=12 format=2]

[ext_resource path="res://Enemies/Spider Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://Enemies/SpiderWeb.gd" type="Script" id=2]
[ext_resource path="res://Combat/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://Combat/FireHurtBox.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "dissolve"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 68, 67, 66, 65, 64, 63 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_dissolve"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "expand"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65, 66, 67, 68 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 1.0

[sub_resource type="CircleShape2D" id=4]
radius = 1.0

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="CircleShape2D" id=6]
radius = 6.0

[node name="SpiderWeb" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 2147483713
script = ExtResource( 2 )

[node name="Health" parent="." instance=ExtResource( 4 )]
max_health = 3

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -5 )
vframes = 16
hframes = 9
frame = 68

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dissolve = SubResource( 1 )
anims/expand = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="Lifetime" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="WebHitBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="WebHitBox"]
shape = SubResource( 4 )

[node name="WebHurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="WebHurtbox" index="0"]
shape = SubResource( 5 )

[node name="FireHurtBox" parent="." instance=ExtResource( 5 )]
visible = false
DAMAGE_PER_SECOND = 3

[node name="CollisionShape2D" parent="FireHurtBox" index="0"]
shape = SubResource( 6 )
[connection signal="no_health" from="Health" to="." method="_on_Health_no_health"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
[connection signal="area_entered" from="WebHitBox" to="." method="_on_WebHitBox_area_entered"]
[connection signal="area_entered" from="WebHurtbox" to="." method="_on_WebHurtbox_area_entered"]
[connection signal="deal_fire_damage" from="FireHurtBox" to="." method="_on_FireHurtBox_deal_fire_damage"]

[editable path="WebHurtbox"]

[editable path="FireHurtBox"]
